# OpenGL-ray-tracing

./: CMakeLists.txt  README.md  main.cpp
include/: camera.h  color.h  common.h  hittable.h  hittable_list.h  interval.h  material.h  ray.h  sphere.h  vec3.h
src/: main.cpp  vec3.cpp
